--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>IMSWeb</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>MVC Maven Webapp</name>
+  <name>IMSWeb</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -91,7 +91,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>MVC</finalName>
+    <finalName>IMSWeb</finalName>
       <plugins>
 	   <plugin>
 	    <groupId>org.apache.maven.plugins</groupId>
